Random Crash w/ Transform Gizmo #59640

Closed
opened 2018-12-19 22:12:30 +01:00 by Tim Smith · 11 comments

System Information
Operating system: Windows 10 Home
Graphics card: MSI Geforce GTX 1080

Blender Version
Broken: 2.79b
Date: 2018-03-22 14:10; Hash: f4dc9f9d68

This is similar to a random crashing issue I've occasionally experienced whilst tweaking UV meshes. I could never replicate that, but this one I can. Every time I load the attached autosave, manipulate the corners of my model's mouth and try to join them with the Snap Tool, Blender just crashes to the desktop without any error message.temp.blend

**System Information** Operating system: Windows 10 Home Graphics card: MSI Geforce GTX 1080 **Blender Version** Broken: 2.79b Date: 2018-03-22 14:10; Hash: f4dc9f9d68b This is similar to a random crashing issue I've occasionally experienced whilst tweaking UV meshes. I could never replicate that, but this one I can. Every time I load the attached autosave, manipulate the corners of my model's mouth and try to join them with the Snap Tool, Blender just crashes to the desktop without any error message.[temp.blend](https://archive.blender.org/developer/F6009979/temp.blend)
Author

Added subscriber: @DustyShinigami

Added subscriber: @DustyShinigami

Added subscriber: @ZedDB

Added subscriber: @ZedDB

I'm not sure what I'm supposed to with that those instructions...
You have to be a bit more clear in exactly what steps needs to be taken to produce the crash. For example:

  1. Open blend file
  2. Go into edit mode
  3. Join verts (press j)
  4. Crash

You can also see if the problem exists in the latest 2.79 builds from here https://builder.blender.org/download/

I'm not sure what I'm supposed to with that those instructions... You have to be a bit more clear in exactly what steps needs to be taken to produce the crash. For example: 1. Open blend file 2. Go into edit mode 3. Join verts (press j) 4. Crash You can also see if the problem exists in the latest 2.79 builds from here https://builder.blender.org/download/
Author
  1. Open Blend file
  2. Remove the UV/Image Editor (optional)
  3. Go into Edit Mode
  4. Move highlighted vertex around with the 3D manipulator widget until it crashes
1. Open Blend file 2. Remove the UV/Image Editor (optional) 3. Go into Edit Mode 4. Move highlighted vertex around with the 3D manipulator widget until it crashes
Campbell Barton was assigned by Sebastian Parborg 2018-12-21 14:08:19 +01:00

I can reproduce this issue with both 2.8 and 2.79.

If I move around the vert with the manipulator widget, it will merge with verts at some positions. After a while of moving around the widget disappears and it will crash if you try to move the vert with the G key.

Backtrace:

Thread 1 "blender" received signal SIGSEGV, Segmentation fault.
0x00005555571f6374 in add_v3_v3v3 (r=0x0, a=0x7fffffffd398, b=0x7fffffffd4e8)
    at /home/zed/programmering/blender_master/blender/source/blender/blenlib/intern/math_vector_inline.c:346
346		r[0] = a[0] + b[0];
(gdb) bt
#0  0x00005555571f6374 in add_v3_v3v3 (r=0x0, a=0x7fffffffd398, b=0x7fffffffd4e8)
    at /home/zed/programmering/blender_master/blender/source/blender/blenlib/intern/math_vector_inline.c:346
#1  0x00005555572022f1 in ElementRotation_ex (t=0x7fffd65b9908, tc=0x7fffd0233188, td=0x7fffcd70f808, mat=0x7fffffffd500, center=0x7fffffffd4e8)
    at /home/zed/programmering/blender_master/blender/source/blender/editors/transform/transform.c:4121
#2  0x0000555557204cae in applyTranslationValue (t=0x7fffd65b9908, vec=0x7fffffffd558)
    at /home/zed/programmering/blender_master/blender/source/blender/editors/transform/transform.c:4877
#3  0x00005555572050d0 in applyTranslation (t=0x7fffd65b9908, UNUSED_mval=0x7fffd65b9ea8)
    at /home/zed/programmering/blender_master/blender/source/blender/editors/transform/transform.c:4959
#4  0x00005555571fd827 in transformApply (C=0x7fffefc30288, t=0x7fffd65b9908)
    at /home/zed/programmering/blender_master/blender/source/blender/editors/transform/transform.c:2649
#5  0x000055555726703d in transform_modal (C=0x7fffefc30288, op=0x7fffcb1c4548, event=0x7fffcb162908)
    at /home/zed/programmering/blender_master/blender/source/blender/editors/transform/transform_ops.c:418
#6  0x00005555570505ce in wm_handler_operator_call (C=0x7fffefc30288, handlers=0x7fffd02335a0, handler=0x7fffcb1c6288, event=0x7fffcb162908, properties=0x0)
    at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm_event_system.c:1962
#7  0x0000555557052021 in wm_handlers_do_intern (C=0x7fffefc30288, event=0x7fffcb162908, handlers=0x7fffd02335a0)
    at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm_event_system.c:2568
#8  0x0000555557052161 in wm_handlers_do (C=0x7fffefc30288, event=0x7fffcb162908, handlers=0x7fffd02335a0)
    at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm_event_system.c:2607
#9  0x0000555557053518 in wm_event_do_handlers (C=0x7fffefc30288)
    at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm_event_system.c:2997
- 10 0x0000555557048289 in WM_main (C=0x7fffefc30288) at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm.c:427
- 11 0x0000555557042bee in main (argc=1, argv=0x7fffffffdd08) at /home/zed/programmering/blender_master/blender/source/creator/creator.c:521
I can reproduce this issue with both 2.8 and 2.79. If I move around the vert with the manipulator widget, it will merge with verts at some positions. After a while of moving around the widget disappears and it will crash if you try to move the vert with the G key. Backtrace: ``` Thread 1 "blender" received signal SIGSEGV, Segmentation fault. 0x00005555571f6374 in add_v3_v3v3 (r=0x0, a=0x7fffffffd398, b=0x7fffffffd4e8) at /home/zed/programmering/blender_master/blender/source/blender/blenlib/intern/math_vector_inline.c:346 346 r[0] = a[0] + b[0]; (gdb) bt #0 0x00005555571f6374 in add_v3_v3v3 (r=0x0, a=0x7fffffffd398, b=0x7fffffffd4e8) at /home/zed/programmering/blender_master/blender/source/blender/blenlib/intern/math_vector_inline.c:346 #1 0x00005555572022f1 in ElementRotation_ex (t=0x7fffd65b9908, tc=0x7fffd0233188, td=0x7fffcd70f808, mat=0x7fffffffd500, center=0x7fffffffd4e8) at /home/zed/programmering/blender_master/blender/source/blender/editors/transform/transform.c:4121 #2 0x0000555557204cae in applyTranslationValue (t=0x7fffd65b9908, vec=0x7fffffffd558) at /home/zed/programmering/blender_master/blender/source/blender/editors/transform/transform.c:4877 #3 0x00005555572050d0 in applyTranslation (t=0x7fffd65b9908, UNUSED_mval=0x7fffd65b9ea8) at /home/zed/programmering/blender_master/blender/source/blender/editors/transform/transform.c:4959 #4 0x00005555571fd827 in transformApply (C=0x7fffefc30288, t=0x7fffd65b9908) at /home/zed/programmering/blender_master/blender/source/blender/editors/transform/transform.c:2649 #5 0x000055555726703d in transform_modal (C=0x7fffefc30288, op=0x7fffcb1c4548, event=0x7fffcb162908) at /home/zed/programmering/blender_master/blender/source/blender/editors/transform/transform_ops.c:418 #6 0x00005555570505ce in wm_handler_operator_call (C=0x7fffefc30288, handlers=0x7fffd02335a0, handler=0x7fffcb1c6288, event=0x7fffcb162908, properties=0x0) at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm_event_system.c:1962 #7 0x0000555557052021 in wm_handlers_do_intern (C=0x7fffefc30288, event=0x7fffcb162908, handlers=0x7fffd02335a0) at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm_event_system.c:2568 #8 0x0000555557052161 in wm_handlers_do (C=0x7fffefc30288, event=0x7fffcb162908, handlers=0x7fffd02335a0) at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm_event_system.c:2607 #9 0x0000555557053518 in wm_event_do_handlers (C=0x7fffefc30288) at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm_event_system.c:2997 - 10 0x0000555557048289 in WM_main (C=0x7fffefc30288) at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm.c:427 - 11 0x0000555557042bee in main (argc=1, argv=0x7fffffffdd08) at /home/zed/programmering/blender_master/blender/source/creator/creator.c:521 ```
Member

Added subscriber: @JacquesLucke

Added subscriber: @JacquesLucke
Member

@ZedDB, I'm not able to reproduce this. Has it been fixed or can you still reproduce it?

@ZedDB, I'm not able to reproduce this. Has it been fixed or can you still reproduce it?

@JacquesLucke I can still reproduce this.

Make sure that you are moving around the selected vert in edit mode with the "Move" widget and try to move the vert so that it overlaps and automerges with other verts in its vicinity.

After a few merges the widget will disappear and blender will crash if you try to move the vert with G

@JacquesLucke I can still reproduce this. Make sure that you are moving around the selected vert in edit mode with the "Move" widget and try to move the vert so that it overlaps and automerges with other verts in its vicinity. After a few merges the widget will disappear and blender will crash if you try to move the vert with `G`
Campbell Barton changed title from Random Crash to Random Crash w/ Transform 2019-01-16 02:04:37 +01:00
Campbell Barton changed title from Random Crash w/ Transform to Random Crash w/ Transform Gizmo 2019-01-16 02:04:46 +01:00

This issue was referenced by c8e5eb58e5

This issue was referenced by c8e5eb58e59e36fa1ecb09c7642dd09be2fbdc88

This issue was referenced by beaa66bb13

This issue was referenced by beaa66bb13a5d801ec10957922b2d90e04ca5d7c

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#59640
No description provided.