Fix T59640: Transform w/ auto-merge & hidden verts crashes